--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,6 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
-
     <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
     <!--
     <dependency>
@@ -121,6 +120,12 @@
       <version>1.8.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>io.swagger</groupId>
+      <artifactId>swagger-annotations</artifactId>
+      <version>1.5.3</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   
   <build>
