--- a/pom.xml
+++ b/pom.xml
@@ -185,7 +185,7 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>1.6.0</version>
         <configuration>
-          <mainClass>com.j9soft.saas.alarms.RaasApplication</mainClass>
+          <mainClass>com.j9soft.saas.alarms.SaasApplication</mainClass>
         </configuration>
       </plugin>
     </plugins>
