--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,6 @@
       <groupId>io.swagger</groupId>
       <artifactId>swagger-annotations</artifactId>
       <version>1.5.3</version>
-      <scope>test</scope>
     </dependency>
 
     <!-- https://groups.google.com/forum/#!topic/confluent-platform/Rnz0n1S7pLA
@@ -143,6 +142,20 @@
       <artifactId>kafka-avro-serializer</artifactId>
       <version>5.0.0</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.openapitools/openapi-generator-maven-plugin -->
+    <dependency>
+      <groupId>org.openapitools</groupId>
+      <artifactId>openapi-generator-maven-plugin</artifactId>
+      <version>${openapi-generator-version}</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.5</version>
+    </dependency>
+
   </dependencies>
   
   <build>
@@ -188,12 +201,39 @@
           <mainClass>com.j9soft.saas.alarms.SaasApplication</mainClass>
         </configuration>
       </plugin>
+
+      <!-- Let's generate helper classes for our model. From OpenAPI yaml.
+           These classes are used only in tests. They are used to generate JSON test strings. -->
+      <plugin>
+        <groupId>org.openapitools</groupId>
+        <artifactId>openapi-generator-maven-plugin</artifactId>
+        <version>${openapi-generator-version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+            <configuration>
+              <inputSpec>${project.basedir}/src/doc/openapi.yaml</inputSpec>
+              <generatorName>java</generatorName>
+              <generateApis>false</generateApis>
+              <generateModelTests>false</generateModelTests>
+              <generateModelDocumentation>false</generateModelDocumentation>
+              <generateSupportingFiles>false</generateSupportingFiles>
+              <configOptions>
+                <sourceFolder>src/gen/java/main</sourceFolder>
+              </configOptions>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
     
   </build>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <openapi-generator-version>3.3.1</openapi-generator-version>
   </properties>
 
 </project>
