--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,12 @@
       <version>2.8.5</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.11.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   
   <build>
