--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,15 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.j9soft.saas.alarms</groupId>
-  <artifactId>saas</artifactId>
+  <artifactId>saas-rest</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   
-  <name>source-active-alarms-store</name>
-  <url>http://maven.apache.org</url>
+  <name>saas-rest</name>
+  <description>
+    The Saas REST Proxy provides a RESTful interface to a Source Active Alarms Store, making it easy to
+    produce Source Alarms without using the native Kafka protocol or clients.
+  </description>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
