Added logic to connect a consumer to Kafka broker. Including first integration tests for it.

--- a/generic-repository-it/src/test/resources/docker-compose.yml
+++ b/generic-repository-it/src/test/resources/docker-compose.yml
@@ -74,6 +74,8 @@ services:
       - kafka_backend_net
     environment:
       GRIT_BOOTSTRAP_SERVERS: kafka:29092
+      GRIT_SCHEMA_REGISTRY_URL: "http://schema-registry:8081"
+
       
 volumes:
   maven_repository:
