--- a/generic-repository-it/src/test/resources/docker-compose.yml
+++ b/generic-repository-it/src/test/resources/docker-compose.yml
@@ -1,6 +1,8 @@
 version: "3.2"
 
 services:
+  # Using community images - https://docs.confluent.io/current/installation/docker/docs/image-reference.html
+  #
   zookeeper:
     image: confluentinc/cp-zookeeper:5.0.1
     hostname: zookeeper
@@ -14,7 +16,7 @@ services:
       - kafka_backend_net
       
   kafka:
-    image: confluentinc/cp-enterprise-kafka:5.0.1
+    image: confluentinc/cp-kafka:5.0.1
     hostname: kafka
     container_name: kafka
     ports:
@@ -30,13 +32,6 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_METRIC_REPORTERS: io.confluent.metrics.reporter.ConfluentMetricsReporter
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS: kafka:29092
-      CONFLUENT_METRICS_REPORTER_ZOOKEEPER_CONNECT: zookeeper:2181
-      CONFLUENT_METRICS_REPORTER_TOPIC_REPLICAS: 1
-      CONFLUENT_METRICS_ENABLE: 'true'
-      CONFLUENT_SUPPORT_CUSTOMER_ID: 'anonymous'
     networks:
       - kafka_backend_net
 
