Point the integration tests to the tested k-repository instance.

--- a/generic-repository-it/src/test/resources/docker-compose.yml
+++ b/generic-repository-it/src/test/resources/docker-compose.yml
@@ -63,6 +63,7 @@ services:
     networks:
       - kafka_backend_net
       
+  # @TODO rename generic-repository-it to k-repository-it
   generic-repository-it:
     image: j9soft/generic-repository-it:latest
     depends_on:
@@ -79,7 +80,8 @@ services:
     environment:
       GRIT_BOOTSTRAP_SERVERS: kafka:29092
       GRIT_SCHEMA_REGISTRY_URL: "http://schema-registry:8081"
-
+      GRIT_REPOSITORY_NAME: prodxphone-saas
+      # @TODO rename GRIT_ TO KRIT_ after renaming generic-repository-it to k-repository-it
       
 volumes:
   maven_repository:
