--- a/generic-repository-it/src/test/resources/docker-compose.yml
+++ b/generic-repository-it/src/test/resources/docker-compose.yml
@@ -54,8 +54,22 @@ services:
     networks:
       - kafka_backend_net
 
+  k-repository-schemas:
+    image: j9soft/k-repository-schemas:latest
+    depends_on:
+      - schema-registry
+    environment:
+      KRS_SCHEMA_REGISTRY_URL: "http://schema-registry:8081"
+    networks:
+      - kafka_backend_net
+      
   k-repository:
     image: j9soft/k-repository:latest
+    depends_on:
+      - zookeeper
+      - kafka
+      - schema-registry
+      - k-repository-schemas
     environment:
       KR_BOOTSTRAP_SERVERS: kafka:9092
       KR_SCHEMA_REGISTRY_URL: "http://schema-registry:8081"
