--- a/k-repository/Dockerfile
+++ b/k-repository/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 # Binaries of our app. (including dependencies)
 # (We do not want any version in the name of jar file. See https://stackoverflow.com/questions/50896123/what-is-the-best-practice-to-get-the-file-name-that-was-defined-in-the-pom-xml )
 #
-COPY target/k-repository-jar-with-dependencies.jar  /app/k-repository.jar
+COPY target/k-repository.jar  /app/k-repository.jar
 
 # Start the app.     (the array syntax - see http://crosbymichael.com/dockerfile-best-practices.html)
 CMD ["java", "-jar", "/app/k-repository.jar"]
