--- a/k-repository/pom.xml
+++ b/k-repository/pom.xml
@@ -133,25 +133,17 @@
         </configuration>
       </plugin>
 
-      <!-- https://stackoverflow.com/questions/574594/how-can-i-create-an-executable-jar-with-dependencies-using-maven -->
+      <!-- 
+      https://stackoverflow.com/questions/38792031/springboot-making-jar-files-no-auto-configuration-classes-found-in-meta-inf  (using this approach now)
+      https://stackoverflow.com/questions/574594/how-can-i-create-an-executable-jar-with-dependencies-using-maven    (maven-assembly-plugin did not work: "No auto configuration classes found in META-INF/spring.factories")
+      -->
       <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <configuration>
-          <archive>
-            <manifest>
-              <mainClass>com.j9soft.krepository.app.KRepositoryApplication</mainClass>
-            </manifest>
-          </archive>
-          <descriptorRefs>
-            <descriptorRef>jar-with-dependencies</descriptorRef>
-          </descriptorRefs>
-        </configuration>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
         <executions>
           <execution>
-            <id>make-assembly</id>
-            <phase>package</phase>
             <goals>
-              <goal>single</goal>
+              <goal>repackage</goal>
             </goals>
           </execution>
         </executions>
