Added logic to delay start of k-repository until Schema Registry and topics are available. Added automatic registration of minimal Avro schemas. (actually these are junit schemas (with not needed attributes), but it is not easy to have the same schemas in the same project for the second time.)

--- a/k-repository/Dockerfile
+++ b/k-repository/Dockerfile
@@ -5,16 +5,29 @@
 # )
 FROM anapsix/alpine-java:8u192b12_server-jre
 
-WORKDIR /app
+# Files required to register initial Avro schemas.
+RUN apk add jq
+RUN apk add curl
+COPY src/main/avro /k-repository-schemas/
 
 # Binaries of our app. (including dependencies)
 # (We do not want any version in the name of jar file. See https://stackoverflow.com/questions/50896123/what-is-the-best-practice-to-get-the-file-name-that-was-defined-in-the-pom-xml )
 #
 COPY target/k-repository.jar  /app/k-repository.jar
 
-# Start the app.     (the array syntax - see http://crosbymichael.com/dockerfile-best-practices.html)
-CMD ["java", "-jar", "/app/k-repository.jar"]
+# Script to start k-repository. 
+# - waits for schema-registry to be available and registers minimal Avro schemas
+#
+COPY start-k-repository.sh /app/start-k-repository.sh
+RUN chmod a+x /app/start-k-repository.sh
 
+# Tool to check for topics.
+COPY kafka-topics-jar-with-dependencies.jar  /tools/kafka-topics-jar-with-dependencies.jar
+
+WORKDIR /app
+
+# Start the app.     (the array syntax - see http://crosbymichael.com/dockerfile-best-practices.html)
+CMD ["/app/start-k-repository.sh"]
 
 # Note:
 #
