--- a/k-repository-it-cf/master.yaml
+++ b/k-repository-it-cf/master.yaml
@@ -16,7 +16,7 @@ Resources:
   VPC:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: infrastructure/vpc.yaml
+      TemplateURL: https://s3.eu-west-2.amazonaws.com/k-repository-it-cf/infrastructure/vpc.yaml
       Parameters:
         EnvironmentName: !Ref AWS::StackName
         VpcCIDR: 10.180.0.0/16
@@ -28,7 +28,7 @@ Resources:
   SecurityGroups:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: infrastructure/security-groups.yaml
+      TemplateURL: https://s3.eu-west-2.amazonaws.com/k-repository-it-cf/infrastructure/security-groups.yaml
       Parameters:
         EnvironmentName: !Ref AWS::StackName
         VPC: !GetAtt VPC.Outputs.VPC
@@ -36,7 +36,7 @@ Resources:
   ECS:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: infrastructure/ecs-cluster.yaml
+      TemplateURL: https://s3.eu-west-2.amazonaws.com/k-repository-it-cf/infrastructure/ecs-cluster.yaml
       Parameters:
         EnvironmentName: !Ref AWS::StackName
         InstanceType: t2.micro
@@ -48,7 +48,7 @@ Resources:
   ZookeeperService:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: services/zookeeper-service/service.yaml
+      TemplateURL: https://s3.eu-west-2.amazonaws.com/k-repository-it-cf/services/zookeeper-service/service.yaml
       Parameters:
         Cluster: !GetAtt ECS.Outputs.Cluster
         DesiredCount: 1
