Docker image is baked with all dependencies, i.e. Integration Tests can be run without any connection to the internet.

--- a/k-repository-it/Dockerfile
+++ b/k-repository-it/Dockerfile
@@ -13,6 +13,21 @@ COPY pom.xml /tmp/
 COPY src /tmp/src/
 WORKDIR /tmp/
 
+# Let's fetch all maven dependencies including plugin dependencies.
+#
+# Related info: 
+# - https://stackoverflow.com/questions/34203179/fetch-all-maven-dependencies-including-plugin-dependencies
+#
+# (This one was not enough. Still something was downloaded.
+#   RUN mvn -B dependency:resolve dependency:resolve-plugins 
+#   RUN mvn -B dependency:copy-dependencies dependency:resolve-plugins dependency:go-offline
+# So, instead we just launch tests. Hopefully it downloads every dependency into /root/.m2 directory to be baked in image.)
+#
+#RUN mvn schema-registry:register --fail-never
+RUN mvn verify --fail-never
+RUN mvn failsafe:integration-test --fail-never
+
+
 # Execute our ITs using failsafe plugin in maven. (`mvn failsafe:integration-test`)
 #
 CMD ["mvn", "verify"]
