Added NAT Gateway and Internet Gateway due to requirements to connect to AWS CloudFormation endpoint.

--- a/k-repository-it-cf/infrastructure/ecs-cluster.yaml
+++ b/k-repository-it-cf/infrastructure/ecs-cluster.yaml
@@ -53,6 +53,9 @@ Resources:
         - Key: Name
           Value: !Sub ${EnvironmentName} ECS host
           PropagateAtLaunch: true
+    CreationPolicy:
+      ResourceSignal:
+        Timeout: PT15M
     UpdatePolicy:
       AutoScalingRollingUpdate:
         MinInstancesInService: 1
