Added kafka service to the stack. (Still missing 'network/DNS/service discovery', so in the result a container with kafka in ECS keeps on failing with 'UnresolvedAddressException: connection to server zookeeper:2181'

--- a/k-repository-it-cf/master.yaml
+++ b/k-repository-it-cf/master.yaml
@@ -53,3 +53,11 @@ Resources:
         Cluster: !GetAtt ECS.Outputs.Cluster
         DesiredCount: 1
 
+  KafkaService:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: https://s3.eu-west-2.amazonaws.com/k-repository-it-cf/services/kafka-service/service.yaml
+      Parameters:
+        Cluster: !GetAtt ECS.Outputs.Cluster
+        DesiredCount: 1
+
